--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -63,6 +63,33 @@
    "manifestFile": "lake-manifest.json",
    "inputRev": "09d33efc68d3ad52db77b731d7253675395a14aa",
    "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/lean-auto.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "6a8c8ff9289f8c2d716bc14b90cb022ffe3ef2e9",
+   "name": "auto",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "6a8c8ff9289f8c2d716bc14b90cb022ffe3ef2e9",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/duper.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "292a840c9bb38c77a4faafe8ed3715bd33ba6348",
+   "name": "Duper",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "dev",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "c023fc486c0a8c76ece8fddcf8d480dc3ba124d6",
+   "name": "QuerySMT",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "«lean-training-data»",
  "lakeDir": ".lake"}
