modify lakefile generation

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -64,31 +64,31 @@
    "inputRev": "09d33efc68d3ad52db77b731d7253675395a14aa",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/lean-auto.git",
+  {"url": "https://github.com/acmepjz/md4lean",
    "type": "git",
    "subDir": null,
-   "rev": "6a8c8ff9289f8c2d716bc14b90cb022ffe3ef2e9",
-   "name": "auto",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "6a8c8ff9289f8c2d716bc14b90cb022ffe3ef2e9",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/duper.git",
-   "type": "git",
-   "subDir": null,
-   "rev": "292a840c9bb38c77a4faafe8ed3715bd33ba6348",
-   "name": "Duper",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "dev",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
-   "type": "git",
-   "subDir": null,
-   "rev": "3c2e0926e2be7a2bb513c9acb85586dc92082193",
-   "name": "QuerySMT",
+   "rev": "9148a0a7506099963925cf239c491fcda5ed0044",
+   "name": "MD4Lean",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/fgdorais/lean4-unicode-basic",
+   "type": "git",
+   "subDir": null,
+   "rev": "87791b59c53be80a9a000eb2bcbf61f60a27b334",
+   "name": "UnicodeBasic",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover/doc-gen4.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "1daa0de7eea6bf8d3e1b0814156ede21a8a9e9e9",
+   "name": "«doc-gen4»",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.9.0",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "«lean-training-data»",
