Improve extraction; add minictx part 2

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -64,13 +64,49 @@
    "inputRev": "v4.7.0",
    "inherited": true,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/hanwenzhu/HTPILeanPackage4.7.git",
+  {"url": "https://github.com/xubaiw/CMark.lean",
    "type": "git",
    "subDir": null,
-   "rev": "8eeebaec8d7fa17b5fe9d97589839ca2560e3ce2",
-   "name": "htpi",
+   "rev": "0077cbbaa92abf855fc1c0413e158ffd8195ec77",
+   "name": "CMark",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "8eeebaec8d7fa17b5fe9d97589839ca2560e3ce2",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/fgdorais/lean4-unicode-basic",
+   "type": "git",
+   "subDir": null,
+   "rev": "6a350f4ec7323a4e8ad6bf50736f779853d441e9",
+   "name": "UnicodeBasic",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hargonix/LeanInk",
+   "type": "git",
+   "subDir": null,
+   "rev": "f1f904e00d79a91ca6a76dec6e318531a7fd2a0f",
+   "name": "leanInk",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "doc-gen",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover/doc-gen4.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "a34d3c1f7b72654c08abe5741d94794db40dbb2e",
+   "name": "«doc-gen4»",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "a34d3c1f7b72654c08abe5741d94794db40dbb2e",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hanwenzhu/HepLean-v4.7.git",
+   "type": "git",
+   "subDir": null,
+   "rev": "7448822afced644bd61f0bdcf4dc438f455f9890",
+   "name": "hep_lean",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "7448822afced644bd61f0bdcf4dc438f455f9890",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "«lean-training-data»",
