Update to lean v4.11.0

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,19 +1,21 @@
-{"version": "1.0.0",
+{"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
  [{"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
-   "rev": "dcea9ce8aba248927fb2ea8d5752bfe1e3fe7b44",
+   "scope": "leanprover-community",
+   "rev": "9c6c2d647e57b2b7a0b42dd8080c698bd33a1b6f",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.9.1",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/quote4",
    "type": "git",
    "subDir": null,
-   "rev": "a7bfa63f5dddbcab2d4e0569c4cac74b2585e2c6",
+   "scope": "leanprover-community",
+   "rev": "9d0bdd07bdfe53383567509348b1fe917fc08de4",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -22,7 +24,8 @@
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
-   "rev": "06cca4bd36b2af743d4858c5cc31604aa9da26bc",
+   "scope": "leanprover-community",
+   "rev": "deb279eb7be16848d0bc8387f80d6e41bcdbe738",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -31,25 +34,28 @@
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
-   "rev": "87c1e7a427d8e21b6eaf8401f12897f52e2c3be9",
+   "scope": "leanprover-community",
+   "rev": "a96aee5245720f588876021b6a0aa73efee49c76",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.38",
+   "inputRev": "v0.0.41",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover/lean4-cli",
    "type": "git",
    "subDir": null,
-   "rev": "a11566029bd9ec4f68a65394e8c3ff1af74c1a29",
+   "scope": "",
+   "rev": "2cf1030dc2ae6b3632c84a09350b675ef3e347d0",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
-   "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/import-graph.git",
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover-community/import-graph",
    "type": "git",
    "subDir": null,
-   "rev": "c29c3cdce415240e9dcec5c583ad5d36f83f9c71",
+   "scope": "leanprover-community",
+   "rev": "1ef0b288623337cb37edd1222b9c26b4b77c6620",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -58,25 +64,28 @@
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
-   "rev": "09d33efc68d3ad52db77b731d7253675395a14aa",
+   "scope": "",
+   "rev": "20c73142afa995ac9c8fb80a9bb585a55ca38308",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "09d33efc68d3ad52db77b731d7253675395a14aa",
+   "inputRev": "v4.11.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
-   "rev": "22d4c2e7f2453e16b9d980cae2367d38bedf3bf5",
+   "scope": "",
+   "rev": "6cd81c96800dc2d2741499e931f350f069ca74c7",
    "name": "auto",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "22d4c2e7f2453e16b9d980cae2367d38bedf3bf5",
+   "inputRev": "6cd81c96800dc2d2741499e931f350f069ca74c7",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/duper.git",
    "type": "git",
    "subDir": null,
-   "rev": "297362b2182c73ae211666cff0dc2479f966bbf4",
+   "scope": "",
+   "rev": "eed2d390e27f9aeb5f18ecb19f23ccd11a8a1e1e",
    "name": "Duper",
    "manifestFile": "lake-manifest.json",
    "inputRev": "dev",
@@ -85,7 +94,8 @@
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
-   "rev": "8a3abddf8cba4768c7eb4a9fc9002953d2aa75b5",
+   "scope": "",
+   "rev": "d3c46964c5d4ab258b8a90c0a351196ab229daf6",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
