Change hammer dependency to specific commit

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -98,17 +98,17 @@
    "rev": "a500ea7a5b9eca0ecaa7b4a229786a61b2707d30",
    "name": "Duper",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "dev",
+   "inputRev": "a500ea7a5b9eca0ecaa7b4a229786a61b2707d30",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "537eaf8e0d3186e28be92764fddbc0fd7402a4cf",
+   "rev": "48757019d1d2680d4764aba59dfd5e020c450fe8",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "48757019d1d2680d4764aba59dfd5e020c450fe8",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/acmepjz/md4lean",
