--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,30 +5,30 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "0a8cd7afb471bb1fdd335118bf1e253a38a2af53",
+   "rev": "0291556f04e89d46cd2999f0f4c1164c81778207",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.14.0",
+   "inputRev": "v4.15.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "35381499677d92d0be8b0d5acf2c1dce43c6acac",
+   "rev": "2096841381ada9388d3b142c3552fa40a8808556",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "35381499677d92d0be8b0d5acf2c1dce43c6acac",
+   "inputRev": "2096841381ada9388d3b142c3552fa40a8808556",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4bbdccd9c5f862bf90ff12f0a9e2c8be032b9a84",
+   "rev": "e9ae2a61ef5c99d6edac84f0d04f6324c5d97f67",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "4bbdccd9c5f862bf90ff12f0a9e2c8be032b9a84",
+   "inputRev": "e9ae2a61ef5c99d6edac84f0d04f6324c5d97f67",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/mhuisi/lean4-cli",
@@ -45,7 +45,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "d55279d2ff01759fa75752fcf1a93d1db8db18ff",
+   "rev": "470c41643209208d325a5a7315116f293c7443fb",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -55,7 +55,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "982700bcf78b93166e5b1af0b4b756b8acfdb54b",
+   "rev": "46376bc3c8f46ac1a1fd7712856b0f7bd6166098",
    "name": "BibtexQuery",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -65,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "fe8e6e649ac8251f43c6f6f934f095ebebce7e7c",
+   "rev": "f8ed91f3a9d806648ae6a03ab98c8b87e8bedc7e",
    "name": "MD4Lean",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -75,47 +75,47 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4dc52f7c6c53625fda3219b1755fa8579ae04b5f",
+   "rev": "d5dda92539a466c73073ee3eca4ace2aa23215b8",
    "name": "Duper",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "4dc52f7c6c53625fda3219b1755fa8579ae04b5f",
+   "inputRev": "d5dda92539a466c73073ee3eca4ace2aa23215b8",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "8d6c853f11a5172efa0e96b9f2be1a83d861cdd9",
+   "rev": "e8dc5fc16c625fc4fe08f42d625523275ddbbb4b",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.14.0",
+   "inputRev": "v4.15.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "35dd124945e6fe3bcd05ce6c5631c471fc23e164",
+   "rev": "997d810f10945740fb68923fbfa0cdf84636d07c",
    "name": "auto",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "35dd124945e6fe3bcd05ce6c5631c471fc23e164",
+   "inputRev": "997d810f10945740fb68923fbfa0cdf84636d07c",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "42dc02bdbc5d0c2f395718462a76c3d87318f7fa",
+   "rev": "2c57364ef83406ea86d0f78ce3e342079a2fece5",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "v4.15.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/LeanSearchClient",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "d7caecce0d0f003fd5e9cce9a61f1dd6ba83142b",
+   "rev": "003ff459cdd85de551f4dcf95cdfeefe10f20531",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -125,41 +125,41 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "519e509a28864af5bed98033dd33b95cf08e9aa7",
+   "rev": "9a0b533c2fbd6195df067630be18e11e4349051c",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.14.0",
+   "inputRev": "v4.15.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "68280daef58803f68368eb2e53046dabcd270c9d",
+   "rev": "2b000e02d50394af68cfb4770a291113d94801b5",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.47",
+   "inputRev": "v0.0.48",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "5a0ec8588855265ade536f35bcdcf0fb24fd6030",
+   "rev": "2689851f387bb2cef351e6825fe94a56a304ca13",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.14.0",
+   "inputRev": "v4.15.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "303b23fbcea94ac4f96e590c1cad6618fd4f5f41",
+   "rev": "f0c584bcb14c5adfb53079781eeea75b26ebbd32",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "master",
+   "inputRev": "v4.15.0",
    "inherited": true,
-   "configFile": "lakefile.lean"}],
+   "configFile": "lakefile.toml"}],
  "name": "«lean-training-data»",
  "lakeDir": ".lake"}
