--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -11,14 +11,24 @@
    "inputRev": "v4.15.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hanwenzhu/premise-selection.git",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "572eac33bc7e3693e2c968bf6c2948893fc3bf7c",
+   "name": "«premise-selection»",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.15.0",
+   "inherited": false,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "70ad7ffec4bf466aae8a27fdae8b3867f07e87c5",
+   "rev": "1dbb3b0bd26fb6a740adc01a806557f5e0b02bb3",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "70ad7ffec4bf466aae8a27fdae8b3867f07e87c5",
+   "inputRev": "1dbb3b0bd26fb6a740adc01a806557f5e0b02bb3",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
@@ -71,16 +81,6 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/duper.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
-   "name": "Duper",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
-   "inherited": true,
-   "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
@@ -91,6 +91,16 @@
    "inputRev": "v4.15.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
+  {"url": "https://github.com/leanprover-community/duper.git",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
+   "name": "Duper",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
+   "inherited": true,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
