--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -11,24 +11,14 @@
    "inputRev": "v4.15.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/hanwenzhu/premise-selection.git",
-   "type": "git",
-   "subDir": null,
-   "scope": "",
-   "rev": "572eac33bc7e3693e2c968bf6c2948893fc3bf7c",
-   "name": "«premise-selection»",
-   "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
-   "inherited": false,
-   "configFile": "lakefile.toml"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "1dbb3b0bd26fb6a740adc01a806557f5e0b02bb3",
+   "rev": "ddc3fe024237a1f3663314b568fc06be3a7a4c68",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "1dbb3b0bd26fb6a740adc01a806557f5e0b02bb3",
+   "inputRev": "ddc3fe024237a1f3663314b568fc06be3a7a4c68",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
@@ -81,12 +71,12 @@
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/leanprover-community/batteries",
+  {"url": "https://github.com/hanwenzhu/premise-selection",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e8dc5fc16c625fc4fe08f42d625523275ddbbb4b",
-   "name": "batteries",
+   "rev": "572eac33bc7e3693e2c968bf6c2948893fc3bf7c",
+   "name": "«premise-selection»",
    "manifestFile": "lake-manifest.json",
    "inputRev": "v4.15.0",
    "inherited": true,
@@ -101,6 +91,16 @@
    "inputRev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
    "inherited": true,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/leanprover-community/batteries",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "e8dc5fc16c625fc4fe08f42d625523275ddbbb4b",
+   "name": "batteries",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.15.0",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
