--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,37 +5,37 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "0291556f04e89d46cd2999f0f4c1164c81778207",
+   "rev": "af3e1046f897d2f22721413bb095e64849cc76a6",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "v4.16.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "70ad7ffec4bf466aae8a27fdae8b3867f07e87c5",
+   "rev": "46da903be8b8247f3e70ffc9c50e250878d9cd58",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "70ad7ffec4bf466aae8a27fdae8b3867f07e87c5",
+   "inputRev": "46da903be8b8247f3e70ffc9c50e250878d9cd58",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e9ae2a61ef5c99d6edac84f0d04f6324c5d97f67",
+   "rev": "a6276f4c6097675b1cf5ebd49b1146b735f38c02",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "e9ae2a61ef5c99d6edac84f0d04f6324c5d97f67",
+   "inputRev": "a6276f4c6097675b1cf5ebd49b1146b735f38c02",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/mhuisi/lean4-cli",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "0c8ea32a15a4f74143e4e1e107ba2c412adb90fd",
+   "rev": "d835296a6149acb9bd2ff65ec01b728b9cc99a1c",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -45,7 +45,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "470c41643209208d325a5a7315116f293c7443fb",
+   "rev": "e86d905bf1453554ea60a853e275bd9de30e0501",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -55,7 +55,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "46376bc3c8f46ac1a1fd7712856b0f7bd6166098",
+   "rev": "9e99cb8cd9ba6906472634e6973c7e27482a70bb",
    "name": "BibtexQuery",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -65,50 +65,60 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "f8ed91f3a9d806648ae6a03ab98c8b87e8bedc7e",
+   "rev": "7cf25ec0edf7a72830379ee227eefdaa96c48cfb",
    "name": "MD4Lean",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hanwenzhu/premise-selection",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "d6dfeb81d84729170fedf7376f05a2ddcf9dbe00",
+   "name": "«premise-selection»",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "v4.16.0",
+   "inherited": true,
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/duper.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
+   "rev": "18035f513455c03f660b10f85af51faaba19ee7e",
    "name": "Duper",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "efd479f7da1a29aa7a77aaead0198e7947830a7a",
+   "inputRev": "v0.0.23",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e8dc5fc16c625fc4fe08f42d625523275ddbbb4b",
+   "rev": "01006c9e86bf9e397c026fef4190478dd1fd897e",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "v4.16.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "997d810f10945740fb68923fbfa0cdf84636d07c",
+   "rev": "a9047f3d3206781c4940edcb328e689d6034446c",
    "name": "auto",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "997d810f10945740fb68923fbfa0cdf84636d07c",
+   "inputRev": "a9047f3d3206781c4940edcb328e689d6034446c",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "2c57364ef83406ea86d0f78ce3e342079a2fece5",
+   "rev": "1622a8693b31523c8f82db48e01b14c74bc1f155",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "v4.16.0-rc1",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/LeanSearchClient",
@@ -125,30 +135,30 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "9a0b533c2fbd6195df067630be18e11e4349051c",
+   "rev": "1a6613663c3eb08c401ce0fd1a408412f2c2321e",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/ProofWidgets4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "2b000e02d50394af68cfb4770a291113d94801b5",
+   "rev": "07f60e90998dfd6592688a14cd67bd4e384b77b2",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.48",
+   "inputRev": "v0.0.50",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "2689851f387bb2cef351e6825fe94a56a304ca13",
+   "rev": "79402ad9ab4be9a2286701a9880697e2351e4955",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "v4.16.0-rc1",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
