Add dependency to Bartosz's KNN and Forest premise selection

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -11,6 +11,16 @@
    "inputRev": "v4.16.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/JOSHCLUNE/lean-premise-selection.git",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "25909ec183974f5a52f9e733475cd635d5c8ead7",
+   "name": "leanPremiseSelection",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "25909ec183974f5a52f9e733475cd635d5c8ead7",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
