--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -21,14 +21,14 @@
    "inputRev": "11fe7a80d4a4dc1adc69ba23a5ad41986ee7e368",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
+  {"url": "https://github.com/hanwenzhu/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "842ca2a4a780f1a3589c930ef82ebb08368682f7",
+   "rev": "e727ee93b40c71188cb9267368114bc3baa23347",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "842ca2a4a780f1a3589c930ef82ebb08368682f7",
+   "inputRev": "main",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
