--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -11,14 +11,14 @@
    "inputRev": "v4.16.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
-  {"url": "https://github.com/hanwenzhu/LeanSMTParser.git",
+  {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e727ee93b40c71188cb9267368114bc3baa23347",
+   "rev": "1461548594a24380b94b32b73c92389d5759253b",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "1461548594a24380b94b32b73c92389d5759253b",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/lean-premise-selection.git",
@@ -85,7 +85,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "8ea294a5ae9e2a5d3dbb7f65c9e0f42b818d235a",
+   "rev": "d88af2b5c9bbd99531d0429f090ad32584d931bd",
    "name": "«premise-selection»",
    "manifestFile": "lake-manifest.json",
    "inputRev": "v4.16.0",
