--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,72 +5,72 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "af3e1046f897d2f22721413bb095e64849cc76a6",
+   "rev": "b3fb998509f92a040e362f8a06f8ee2825ec8c10",
    "name": "«doc-gen4»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.16.0",
+   "inputRev": "v4.18.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/LeanSMTParser.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "eeef5e95a9851736f279ae0680c981f2c527ca60",
+   "rev": "ffd54223145eea1d76c9ab4e48d38ba1ba1b3c4a",
    "name": "QuerySMT",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "eeef5e95a9851736f279ae0680c981f2c527ca60",
+   "inputRev": "ffd54223145eea1d76c9ab4e48d38ba1ba1b3c4a",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/JOSHCLUNE/lean-premise-selection.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "0076d43fad5969b7087603e6216b2178a90a7512",
+   "rev": "86f02182e5b30737b41aae20b8ef59d3f03d0a84",
    "name": "leanPremiseSelection",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "0076d43fad5969b7087603e6216b2178a90a7512",
+   "inputRev": "86f02182e5b30737b41aae20b8ef59d3f03d0a84",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/mathlib4.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "a6276f4c6097675b1cf5ebd49b1146b735f38c02",
+   "rev": "aa936c36e8484abd300577139faf8e945850831a",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "a6276f4c6097675b1cf5ebd49b1146b735f38c02",
+   "inputRev": "v4.18.0",
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/mhuisi/lean4-cli",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "d835296a6149acb9bd2ff65ec01b728b9cc99a1c",
+   "rev": "dd423cf2b153b5b14cb017ee4beae788565a3925",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
-  {"url": "https://github.com/fgdorais/lean4-unicode-basic",
+  {"url": "https://github.com/jcommelin/lean4-unicode-basic",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "e86d905bf1453554ea60a853e275bd9de30e0501",
+   "rev": "458e2d3feda3999490987eabee57b8bb88b1949c",
    "name": "UnicodeBasic",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "bump_to_v4.18.0-rc1",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/dupuisf/BibtexQuery",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "9e99cb8cd9ba6906472634e6973c7e27482a70bb",
+   "rev": "c07de335d35ed6b118e084ec48cffc39b40d29d2",
    "name": "BibtexQuery",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
    "inherited": true,
-   "configFile": "lakefile.lean"},
+   "configFile": "lakefile.toml"},
   {"url": "https://github.com/acmepjz/md4lean",
    "type": "git",
    "subDir": null,
@@ -85,57 +85,57 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "af09a3c60bfd609c19f29a6e5cbe1332317a4ff4",
+   "rev": "f57d9c5f771966dfdc127e059642b928cf4b17dd",
    "name": "«premise-selection»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.16.0",
+   "inputRev": "v4.18.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/duper.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "4f71a99b24c1b6dc946f258ff94afec41f24ee2d",
+   "rev": "65737400c80dcff0c205e79717fd0389ee8132ae",
    "name": "Duper",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "4f71a99b24c1b6dc946f258ff94afec41f24ee2d",
+   "inputRev": "65737400c80dcff0c205e79717fd0389ee8132ae",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/batteries",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "01006c9e86bf9e397c026fef4190478dd1fd897e",
+   "rev": "613510345e4d4b3ce3d8c129595e7241990d5b39",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.16.0",
+   "inputRev": "v4.18.0",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/lean-auto.git",
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "8af43a276ecb2d7df4273af63bf74d69300988b6",
+   "rev": "cab3e33cf347574104753eabc4269097fc25d82d",
    "name": "auto",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "8af43a276ecb2d7df4273af63bf74d69300988b6",
+   "inputRev": "cab3e33cf347574104753eabc4269097fc25d82d",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "1622a8693b31523c8f82db48e01b14c74bc1f155",
+   "rev": "ebfb31672ab0a5b6d00a018ff67d2ec51ed66f3a",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.16.0-rc1",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/LeanSearchClient",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "003ff459cdd85de551f4dcf95cdfeefe10f20531",
+   "rev": "8d29bc2c3ebe1f863c2f02df816b4f3dd1b65226",
    "name": "LeanSearchClient",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -145,7 +145,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "1a6613663c3eb08c401ce0fd1a408412f2c2321e",
+   "rev": "c96401869916619b86e2e54dbb8e8488bd6dd19c",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -155,30 +155,30 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "07f60e90998dfd6592688a14cd67bd4e384b77b2",
+   "rev": "a602d13aca2913724c7d47b2d7df0353620c4ee8",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.50",
+   "inputRev": "v0.0.53",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "79402ad9ab4be9a2286701a9880697e2351e4955",
+   "rev": "ecaaeb0b44a8d5784f17bd417e83f44c906804ab",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.16.0-rc1",
+   "inputRev": "master",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/quote4",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "f0c584bcb14c5adfb53079781eeea75b26ebbd32",
+   "rev": "0e05c2f090b7dd7a2f530bdc48a26b546f4837c7",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.15.0",
+   "inputRev": "master",
    "inherited": true,
    "configFile": "lakefile.toml"}],
  "name": "«lean-training-data»",
